style: make pages height greater than view port height to avoid jump
Make pages to have scroll bar to avoid the UI jump when navigating from
a page with scroll bar to a page without scroll bar.

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -135,6 +135,6 @@ body {
   }
 
   .page {
-    @apply min-h-screen flex flex-col;
+    @apply min-h-[101vh] flex flex-col;
   }
 }
